# setuptools-golang-cli

./: .gitignore  README.md  pyproject.toml  setup.py  setuptools_golang_cli.py
