[project]
name = "setuptools-golang-cli"
version = "0.0.3"
description = "Setuptools extension for building cli written in golang."
authors = [{name = "Aleksey Petrunnik", email = "petrunnik.a@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3"
dependencies = []

[project.urls]
homepage = "https://github.com/aleksey925/setuptools-golang-cli"
repository = "https://github.com/aleksey925/setuptools-golang-cli"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
